# SysuccRNAseqAgent

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
docs/: flow.md  usage.md  workflows.md
examples/: project.atacseq.demo.json  project.chipseq.demo.json  project.cuttag.demo.json  project.demo.json  project.rnaseq.nfcore.demo.json
src/rnaseq_agent/: __init__.py  chat.py  cli.py  configuration.py  defaults.py  emailer.py  estimate.py  execution.py  gui.py  pipeline.py  remote.py  run_agent.py  shell.py  storage.py  validation.py  wizard.py
src/rnaseq_agent/workflows/: __init__.py  base.py  epigenome.py  registry.py  rnaseq.py
