[project]
name = "sysu-rnaseq-agent"
version = "0.1.0"
description = "Interactive RNA-seq analysis agent for local orchestration and remote server execution."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
rnaseq-agent = "rnaseq_agent.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
